--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.3.0
+-------------------------
+
+    o Prioritize FluteMLE
+    o Remove warnings from vignettes
+
+
 CHANGES IN VERSION 1.2.2
 -------------------------
 
